# C_SFML_Game_Project

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  GamePhase.cpp  GamePhase.h  MainMenuPhase.cpp  MainMenuPhase.h  Movement.cpp  Movement.h  Phase.cpp  Phase.h  Player.cpp  Player.h
Config/: window_config.ini
